spacing fixed

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
   ========================================================================== */
 * {
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .clearfix:after {
@@ -406,14 +407,44 @@ nav a:hover {
 }
 
 .container-contact {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: column;
+  align-items: center;
   float: left;
   width: 100%;
+}
+
+.buttonContactLeft,
+.buttonContactLeft:visited {
+  display: block;
+  padding: 12px;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #222;
+  border-radius: 5px;
+  background: #B5D5B5;
+  box-shadow: inset 0 -3px 0 rgba(0,0,0,.1);
+  color: #3b3a3a;
+  font-family: "Quicksand", sans-serif;
+}
+
+.buttonContactLeft:hover {
+  color: white;
+  background: #A3CFB2;
+  font-family: "Quicksand", sans-serif;
 }
 
 .contact h2 {
   text-align: center;
   margin-bottom: 40px;
-  margin-top: 144px;
+  margin-top: 115px;
+}
+
+.lgemail {
+  padding: 40px;
+  margin-top: -41px;
 }
 
 
@@ -422,7 +453,7 @@ nav a:hover {
    ================================================================ */
 @media screen and (max-width: 1020px) {
   header {
-    padding: 20px;
+    padding-top: 20px;
   }
 
   h1 {
